--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-
   </head>
   <body>
     <main>
@@ -41,6 +40,6 @@
         </ul>
       </div>
     </main>
-    <script src="scripts.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
